// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Highlight should render correctly 1`] = `
.emotion-0 {
  display: inline;
}

.emotion-2 {
  display: inline;
  background-color: #fce79e;
  color: var(--tonic-colors-black-primary);
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="highlight"
    data-tonic="Highlight"
  >
    <mark
      class="emotion-2 emotion-1"
      data-tonic="Mark"
    >
      hello
    </mark>
     world
  </div>
</div>
`;

exports[`Highlight slots and slotProps should pass slotProps to mark component 1`] = `
.emotion-0 {
  display: inline;
}

.emotion-2 {
  display: inline;
  background-color: #fce79e;
  color: var(--tonic-colors-black-primary);
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-tonic="Highlight"
  >
    <mark
      class="custom-highlight emotion-2 emotion-1"
      data-testid="highlight-mark"
      data-tonic="Mark"
    >
      hello
    </mark>
     world
  </div>
</div>
`;

exports[`Highlight variants should apply "emphasis" variant 1`] = `
.emotion-0 {
  display: inline;
}

.emotion-2 {
  display: inline;
  background-color: inherit;
  color: var(--tonic-colors-white-emphasis);
  font-weight: var(--tonic-fontWeights-semibold);
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-tonic="Highlight"
  >
    <mark
      class="emotion-2 emotion-1"
      data-tonic="Mark"
    >
      hello
    </mark>
     world
  </div>
</div>
`;

exports[`Highlight variants should apply "highlight" variant 1`] = `
.emotion-0 {
  display: inline;
}

.emotion-2 {
  display: inline;
  background-color: #fce79e;
  color: var(--tonic-colors-black-primary);
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-tonic="Highlight"
  >
    <mark
      class="emotion-2 emotion-1"
      data-tonic="Mark"
    >
      hello
    </mark>
     world
  </div>
</div>
`;
